--- a/HN120_ShopQuanAo.View/Views/Home/Index.cshtml
+++ b/HN120_ShopQuanAo.View/Views/Home/Index.cshtml
@@ -193,7 +193,7 @@
             <!--sidebar banner-->
             <div class="sidebar_widget bottom ">
                 <div class="banner_img">
-                    <a href="#"><img src="/img/banner/banner9.jpg" alt=""></a>
+                    <a href="#"><img src="/img/banner/bannerHomlander3.jpg" alt=""></a>
                 </div>
             </div>
             <!--sidebar banner end-->
@@ -495,7 +495,7 @@
                 <div class="row">
                     <div class="col-lg-6 col-md-6">
                         <div class="single_banner">
-                            <a href="#"><img src="/img/banner/banner7.jpg" alt=""></a>
+                            <a href="#"><img src="/img/banner/screenshot_1721658069.png" alt=""></a>
                             <div class="banner_title">
                                 <p>Up to <span> 40%</span> off</p>
                             </div>
@@ -503,7 +503,7 @@
                     </div>
                     <div class="col-lg-6 col-md-6">
                         <div class="single_banner">
-                            <a href="#"><img src="/img/banner/banner8.jpg" alt=""></a>
+                            <a href="#"><img src="/img/banner/banner-thoi-trang-nam.jpg" alt=""></a>
                             <div class="banner_title title_2">
                                 <p>sale off <span> 30%</span></p>
                             </div>
