hiep up tam code de lay code cua dung ve lam

--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
@@ -196,7 +196,7 @@
                             <span class="hide-menu">Quản lý hóa đơn</span>
                         </li>
                         <li class="sidebar-item">
-                            <a class="sidebar-link" href="/admin/HoaDon/QuanLyHoaDon">
+                            <a class="sidebar-link" asp-action="QuanLyHoaDon" asp-controller="HoaDon" asp-area="Admin">
                                 <span>
                                     <i class="ti ti-typography"></i>
                                 </span>
