--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/UserManager/GetAllEmpolyee.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/UserManager/GetAllEmpolyee.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "GetAllEmpolyee";
     Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
-
+    string ReturnUrl = ViewBag.ReturnUrl;
 }
 <style>
     .filter-form {
@@ -100,7 +100,6 @@
                     @items.PhoneNumber
                 </td>
                 <td>
-
                     @if (items.Gender == null)
                     {
                         <p>Chưa có cập nhật giới tính</p>
@@ -120,11 +119,9 @@
                             <p>Khác</p>
                         }
                     }
-
-
                 </td>
                 <td>
-                    @(items.Birthday.HasValue ? items.Birthday.Value.ToString("dd/MM/yyyy") : "N/A")
+                    @(items.Birthday.HasValue ? items.Birthday.Value.ToString("dd/MM/yyyy") : "Chưa cập nhật")
                 </td>
                 <td>
 
@@ -136,9 +133,13 @@
                     {
                         <span style="color:red">Đã khóa</span>
                     }
+                    else if (items.Status == -1)
+                    {
+                        <span style="color:violet">Chờ xác nhận</span>
+                    }
                 </td>
                 <td>
-                    <a asp-controller="UserManager" asp-action="Update" asp-route-id="@items.Id" class="btn btn-primary">
+                    <a asp-controller="UserManager" asp-action="Update" asp-route-id="@items.Id" asp-route-returnUrl="@ReturnUrl" class="btn btn-primary">
                         <i class="bi bi-gear-fill"></i>
                     </a>
                     @if (items.Status == 1)
