--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/HoaDon/Index.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/HoaDon/Index.cshtml
@@ -530,7 +530,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
                     
                     <div class="col-md-12 text-center">
                         <label for="clear"></label>
-                        <button type="text" class="form-control btn btn-danger w-50 d-grid gap-2 col-6 mx-auto mt-4" name="clear" id="clear">Chọn lại địa chỉ</button>
+                        <button type="text" class="form-control btn btn-danger w-50 d-grid gap-2 col-6 mx-auto mt-4" name="clear" id="clear">Chọn địa chỉ khác</button>
                     </div>
                     <div class="col-md-12">
                         <label for="btn_ghichu">Ghi chú</label>
@@ -598,14 +598,14 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 @* Modal in hóa đơn  *@
 <div class="modal fade" id="inhoadon_modal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="inhoadon_modalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered modal-lg">
+    <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
-            <div class="modal-header">
+           @*  <div class="modal-header">
                 <h5 class="modal-title" id="inhoadon_modalLabel">Thông báo</h5>
-               @*  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button> *@
-            </div>
-            <div class="modal-body">
-                <h4>Thanh toán thành công mày có muốn in hóa đơn không ?</h4>
+              
+            </div> *@
+            <div class="modal-body" style="text-align:center">
+                <h4>In hóa đơn ?</h4>
             </div>
             <div class="modal-footer" style="display: flex;justify-content: space-between;">
                 <button type="button" id="khongin_hoadon" class="btn btn-secondary" data-bs-dismiss="modal">Không</button>
